--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Letterboxd for SNL"
+      content="Rate, review, and discover SNL sketches. Track sketches, share reviews, and following fellow comedy fans."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/snlogo.png" />
     <!--
