--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Rate, review, and discover SNL sketches. Track sketches, share reviews, and following fellow comedy fans."
     />
+    <meta name="google-site-verification" content="KkENzpgAKeDdbg0SGuZpemEfbSvZduRPqYKxL7AIqC4" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/snlogo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
