--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Rate, review, and discover SNL sketches. Track sketches, share reviews, and following fellow comedy fans."
+      content="Rate, review, and discover Saturday Night Live sketches. Track SNL sketches, share reviews of SNL sketches, and following fellow comedy fans."
     />
     <meta name="google-site-verification" content="KkENzpgAKeDdbg0SGuZpemEfbSvZduRPqYKxL7AIqC4" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/snlogo.png" />
